# git-heatmap

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude-plugin/: plugin.json
.github/workflows/: release.yml
commands/: heatmap.md
hooks/: hooks.json
scripts/: run-heatmap.cmd  run-heatmap.sh
skills/git-heatmap/: SKILL.md
src/: cli.rs  git_log.rs  main.rs  model.rs  output.rs  signal.rs  stats.rs
src/svg/: authors.rs  heatmap.rs  mod.rs  time_of_day.rs  trend.rs
