[package]
name = "git-heatmap"
version = "0.1.0"
edition = "2021"
description = "Render 4 Git activity charts for the git-heatmap Claude Code plugin"
license = "MIT"

[[bin]]
name = "git-heatmap"
path = "src/main.rs"

[dependencies]
chrono      = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow      = "=1.0.86"
clap        = { version = "=4.5.16", features = ["derive"] }

# Pin proc-macro toolchain to versions that compile under Cargo 1.78 (Windows).
proc-macro2 = "=1.0.86"
quote       = "=1.0.37"
syn         = "=2.0.79"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
ctrlc       = "3"

[dependencies.plotters]
version = "0.3"
default-features = false
features = ["svg_backend", "line_series"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"